#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

DG-2011-06-06-0: Cleanup:     aimk compiles uge-extensions when found
                              per default
                 Review:      HP

HP-2011-05-31-0: Bugfix:      fstype binary doesn't detect NFS4 on Linux if the
                              mountpoint is deeper than one directory
                 Issue:       GE-3505
                 Review:      SH

JG-2011-05-31-2: Enhancem.:   evaluate / fix / improve the spooling performance
                              tests - part 1: added csv output
                 Issue:       GE-3363
                 Review:      EB

JG-2011-05-31-1: Enhancem.:   mark reporting_params log_consumables as
                              deprecated in the man page sge_conf.5
                 Issue:       GE-3497
                 Review:      EB

JG-2011-05-31-0: Bugfix:      o workaround optimizer bug of Sun Studio 9 on
                                Solaris Sparc 64
                              o fix building with gcc on Solaris
                 Issue:       GE-3468
                 Review:      EB

HP-2011-05-27-0: Bugfix:      PDC_INTERVAL=NEVER does not work
                 Issue:       GE-3474
                 Review:      EB

EB-2011-05-26-0: Bugfix:      clone upgrade might fail if master host is 
                              referenced in host_aliases file.
                 Issue:       GE-3481
                 Review:      DG

JG-2011-05-25-0: Enhancem.:   try to detect location of libc.so.6 on Linux in
                              arch script
                 Issue:       GE-3467
                 Review:      SH
