@@ -29,6 +29,8 @@
  * 
  *   All Rights Reserved.
  * 
+ *  Portions of this software are Copyright (c) 2011-2012 Univa Corporation
+ *
  ************************************************************************/
 /*___INFO__MARK_END__*/
 
@@ -161,5 +163,6 @@ void mconf_get_s_locks(char **pret);
 int mconf_get_jsv_timeout(void);
 int mconf_get_jsv_threshold(void);
 bool mconf_get_ignore_ngroups_max_limit(void);
+bool mconf_get_enable_submit_lib_path(void);
 
 #endif /* __SGE_CONF_H */
