@@ -8,6 +8,12 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2012-02-14-0: Bugfix:      security hole in UGE when setting LD_PRELOAD or
+                              LD_LIBRARY or similar environment variables.
+                              Reported by William Hay (w.hay@ucl.ac.uk).
+                 Issue:       GE-3761
+                 Review:      MD
+
 DG-2011-06-06-0: Cleanup:     aimk compiles uge-extensions when found
                               per default
                  Review:      HP
